--- a/qtgeo/interfaccia.ui
+++ b/qtgeo/interfaccia.ui
@@ -16,8 +16,8 @@
   <widget class="QWidget" name="horizontalLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>271</x>
-     <y>207</y>
+     <x>311</x>
+     <y>227</y>
      <width>122</width>
      <height>27</height>
     </rect>
@@ -69,9 +69,9 @@
   <widget class="QWidget" name="horizontalLayoutWidget_3">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>205</y>
-     <width>133</width>
+     <x>10</x>
+     <y>230</y>
+     <width>251</width>
      <height>29</height>
     </rect>
    </property>
@@ -96,6 +96,33 @@
       </property>
      </spacer>
     </item>
+    <item>
+     <widget class="QLineEdit" name="lat_input">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="lon_input">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QGraphicsView" name="immagine">
@@ -114,8 +141,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>240</y>
+     <x>0</x>
+     <y>310</y>
      <width>354</width>
      <height>191</height>
     </rect>
@@ -271,8 +298,8 @@
   <widget class="QLabel" name="distanza_label">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>210</y>
+     <x>440</x>
+     <y>230</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -284,8 +311,8 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>230</y>
+     <x>390</x>
+     <y>250</y>
      <width>67</width>
      <height>17</height>
     </rect>
@@ -294,62 +321,115 @@
     <string>(in m)</string>
    </property>
   </widget>
-  <widget class="QRadioButton" name="tipo_sift_lowe">
+  <widget class="QGroupBox" name="features_groupbox">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>290</y>
-     <width>117</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>VLSift</string>
-   </property>
-   <property name="checked">
-    <bool>true</bool>
-   </property>
-   <attribute name="buttonGroup">
-    <string notr="true">tipo_sift</string>
-   </attribute>
-  </widget>
-  <widget class="QRadioButton" name="tipo_sift_siftgpu">
-   <property name="geometry">
-    <rect>
-     <x>380</x>
-     <y>320</y>
-     <width>117</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>SiftGPU</string>
-   </property>
-   <attribute name="buttonGroup">
-    <string notr="true">tipo_sift</string>
-   </attribute>
-  </widget>
-  <widget class="QLineEdit" name="parametri_input">
-   <property name="geometry">
-    <rect>
-     <x>370</x>
-     <y>370</y>
+     <x>360</x>
+     <y>310</y>
      <width>171</width>
-     <height>27</height>
+     <height>181</height>
     </rect>
    </property>
+   <property name="title">
+    <string>Features</string>
+   </property>
+   <widget class="QRadioButton" name="tipo_sift_vlsift">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>117</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>VLSift</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+    <attribute name="buttonGroup">
+     <string notr="true">tipo_sift</string>
+    </attribute>
+   </widget>
+   <widget class="QRadioButton" name="tipo_sift_siftgpu">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>60</y>
+      <width>117</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SiftGPU</string>
+    </property>
+    <attribute name="buttonGroup">
+     <string notr="true">tipo_sift</string>
+    </attribute>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>100</y>
+      <width>141</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>parametri opzionali:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="parametri_input">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>120</y>
+      <width>171</width>
+      <height>27</height>
+     </rect>
+    </property>
+   </widget>
+   <zorder>label_6</zorder>
+   <zorder>parametri_input</zorder>
+   <zorder>tipo_sift_vlsift</zorder>
+   <zorder>tipo_sift_siftgpu</zorder>
+   <zorder>tipo_sift_vlsift</zorder>
+   <zorder>tipo_sift_siftgpu</zorder>
+   <zorder>label_6</zorder>
+   <zorder>parametri_input</zorder>
   </widget>
-  <widget class="QLabel" name="label_6">
+  <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>350</y>
-     <width>141</width>
-     <height>17</height>
+     <x>110</x>
+     <y>210</y>
+     <width>71</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>parametri opzionali:</string>
+    <string>Latitudine</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>210</y>
+     <width>81</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Longitudine</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
    </property>
   </widget>
  </widget>
